--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 </head>
 <body>
     <header class="hero">
+        <video class="hero-video" autoplay muted loop playsinline>
+            <source src="images/1034067-hd_1920_1080_25fps.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <div class="hero-content">
             <h1>My Journey Through 2024</h1>
             <p class="subtitle">A Year of Growth, Change, and Adventure</p>
         </div>
     </header>
+
 
     <nav class="main-nav">
         <ul>
